swagger receipt list & receipt sea list
